--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             border: 5px dashed #cccccc;
             border-radius: 100px;
             height: 225px;
+            max-width: 1400px;
         }
     </style>
 </head>
